# cyanotype

./: .gitignore  README.md  main.py  pyproject.toml
classes/: action.py  consumables.py  equipment.py  flag.py  inventory.py  menu.py  scene.py  stat.py
content/: actions.json  actions.yaml  consumables.json  consumables.yaml  flags.json  flags.yaml  items.json  items.yaml  scenes.json  scenes.yaml  stats.json  stats.yaml
engine/: settings.py  utils.py
interface/: buttons.py
