[tool.poetry]
name = "txtarcade"
version = "0.1.0"
description = ""
authors = ["eidolonzx <eidolonzx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
arcade = "^2.6.17"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
